--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
   },
   "homepage": "https://github.com/Galdamz/Express-Test-Jest#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^27.5.0",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "esbuild": "^0.14.38",
     "eslint": "^8.14.0",
     "ts-jest": "^28.0.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
