--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "How to test your Express API with jest & supertest using TypeScript...",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node ./dist/index.js",
+    "dev": "npx nodemon",
+    "build": "esbuild ./src/index.ts --platform=node --bundle --minify --outfile=dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,7 @@
     "@typescript-eslint/parser": "^5.22.0",
     "esbuild": "^0.14.38",
     "eslint": "^8.14.0",
+    "nodemon": "^2.0.16",
     "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
