--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "How to test your Express API with jest & supertest using TypeScript...",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "npx jest",
     "start": "node ./dist/index.js",
     "dev": "npx nodemon",
     "build": "esbuild ./src/index.ts --platform=node --bundle --minify --outfile=dist/index.js"
@@ -28,15 +28,18 @@
   },
   "homepage": "https://github.com/Galdamz/Express-Test-Jest#readme",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^27.5.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "esbuild": "^0.14.38",
     "eslint": "^8.14.0",
     "nodemon": "^2.0.16",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
@@ -45,6 +48,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "http-status-codes": "^2.2.0"
   }
 }
